--- a/scss/object/project/_branchmenu.scss
+++ b/scss/object/project/_branchmenu.scss
@@ -1,15 +1,26 @@
 @use "../../foundation/mixin";
 
-.p-branch-menu__lists{
+.p-branch-menu{
+    &__lists{
     @include mixin.tab{
         display: flex;
     }
-}
+    }
 
-.p-branch-menu--container{
-    display: flex;
-    flex-flow: column;
-    color: #3C2A10;
-    font-family: 'M+PLUS+1';
-    bottom: 1%;
+    &__takeout{
+        display: flex;
+        flex-flow: column;    
+    }
+
+    &__eatin{
+        display: flex;
+        flex-flow: column;    
+    }
+    
+    &--container{
+        margin-top: auto;
+        color: #3C2A10;
+        font-family: 'M+PLUS+1';
+    
+    }
 }
