--- a/scss/object/project/_container.scss
+++ b/scss/object/project/_container.scss
@@ -2,6 +2,7 @@
 
 .p-sidebar{
     &--container{
+        display: flex;
         font-family: 'M+PLUS+1';
         position: relative;
         &--details{
