--- a/scss/object/component/_items.scss
+++ b/scss/object/component/_items.scss
@@ -7,7 +7,9 @@
     background-size: contain;
     padding: 7px 10px 15px 10px;
     margin: 0 15px 15px 15px;
-    &__second{
-        margin-bottom: 5px;
+    align-items: flex-end;
+    margin-top: auto;
+    &second{
+        margin-top: auto;
     }
 }
