--- a/scss/object/project/_container.scss
+++ b/scss/object/project/_container.scss
@@ -1,31 +1,13 @@
 @use "../../foundation/mixin";
 
-.p-sidebar{
-    &--container{
-        display: flex;
-        font-family: 'M+PLUS+1';
-        position: relative;
-        &--details{
-            width: 100%;
-            height: 100vh;
-            position: fixed;
-            top: 0;
-            left: 10%;
-            background: #F2EDE9;
-            padding-top: 210px;
-            z-index: 1000;
-            transition: all 1s;
-            overflow: scroll;
-            @include mixin.tab{
-                left: 55%;
-            }
-            @include mixin.pc{
-                height: auto;
-                top: 212px;
-                left: 0;
-                padding: 0;
-                position: absolute;
-            }
-        }
+.p-sidebar--container--details{
+    padding-top: 212px;
+}
+
+.p-map__container{
+    position: relative;
+    width: 100%;
+    @include mixin.pc{
+        width: 60%;
     }
 }
