--- a/scss/style.scss
+++ b/scss/style.scss
@@ -9,7 +9,7 @@ foundation
 @use "foundation/reset";
 
 /*-------------------------
-layoutx
+layout
 -------------------------*/
 @use "layout/header";
 @use "layout/body";
