--- a/css/style.css
+++ b/css/style.css
@@ -54,6 +54,7 @@ body.active::after {
   bottom: 0;
   left: 0;
   right: 0;
+  transition: transform 0.8s;
 }
 
 .l-main {
@@ -69,17 +70,36 @@ body.active::after {
 }
 
 .l-sidebar {
-  display: none;
+  overflow-x: hidden;
   background-color: #F2EDE9;
+  font-family: "M+PLUS+1";
+  width: 100%;
+  height: 100vh;
+  position: fixed;
+  top: 0;
+  right: -120%;
+  z-index: 1000;
+  overflow: scroll;
 }
 .l-sidebar.active {
-  display: block;
+  transition: all 0.5s;
+  right: -10%;
+}
+@media screen and (min-width: 600px) {
+  .l-sidebar.active {
+    right: -60%;
+  }
 }
 @media screen and (min-width: 1280px) {
   .l-sidebar {
-    display: block;
+    display: grid;
     grid-column: 2/3;
     grid-row: 1/3;
+    height: 100%;
+    position: relative;
+    left: initial;
+    top: initial;
+    right: initial;
   }
 }
 
@@ -133,13 +153,34 @@ body.active::after {
 .p-map {
   background-image: url(/img/map.png);
   position: relative;
+  z-index: 1;
   min-height: 100vh;
   width: 100%;
+  background-color: rgba(0, 0, 0, 0.8);
   background-repeat: no-repeat;
   background-size: cover;
   background-position: center center;
-  background-color: rgba(0, 0, 0, 0.8);
   vertical-align: top;
+}
+.p-map::after {
+  content: "";
+  position: absolute;
+  z-index: 2;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 60%;
+  background-color: rgba(0, 0, 0, 0.4);
+}
+@media screen and (min-width: 600px) {
+  .p-map::after {
+    height: 100%;
+  }
+}
+@media screen and (min-width: 1280px) {
+  .p-map::after {
+    width: 60%;
+  }
 }
 
 .p-footer {
@@ -186,6 +227,10 @@ body.active::after {
   }
 }
 .c-btn--close {
+  display: none;
+}
+.c-btn--close.active {
+  display: block;
   position: fixed;
   top: 0;
   right: 0;
@@ -196,7 +241,7 @@ body.active::after {
   border: none;
 }
 @media screen and (min-width: 1280px) {
-  .c-btn--close {
+  .c-btn--close.active {
     display: none;
   }
 }
@@ -239,6 +284,7 @@ body.active::after {
   font-weight: normal;
 }
 .c-text--map {
+  position: relative;
   color: #fff;
   font-family: "M+PLUS+1";
   font-size: 14px;
@@ -246,6 +292,7 @@ body.active::after {
   padding: 20px 40px 40px 40px;
   line-height: 2.5;
   height: 100%;
+  z-index: 3;
 }
 @media screen and (min-width: 1280px) {
   .c-text--map {
@@ -333,6 +380,8 @@ body.active::after {
   padding: 7px 0 3px 10px;
 }
 .c-title--underline__map {
+  position: relative;
+  z-index: 3;
   color: #fff;
   font-size: 30px;
   font-family: "M+PLUS+1";
@@ -407,35 +456,17 @@ body.active::after {
   }
 }
 
-.p-sidebar--container {
-  display: flex;
-  font-family: "M+PLUS+1";
-  position: relative;
-}
 .p-sidebar--container--details {
-  width: 100%;
-  height: 100vh;
-  position: fixed;
-  top: 0;
-  left: 10%;
-  background: #F2EDE9;
-  padding-top: 210px;
-  z-index: 1000;
-  transition: all 1s;
-  overflow: scroll;
+  padding-top: 212px;
 }
-@media screen and (min-width: 600px) {
-  .p-sidebar--container--details {
-    left: 55%;
-  }
+
+.p-map__container {
+  position: relative;
+  width: 100%;
 }
 @media screen and (min-width: 1280px) {
-  .p-sidebar--container--details {
-    height: auto;
-    top: 212px;
-    left: 0;
-    padding: 0;
-    position: absolute;
+  .p-map__container {
+    width: 60%;
   }
 }
 
@@ -455,14 +486,13 @@ body.active::after {
 .p-branch-menu--container {
   margin-top: auto;
   color: #3C2A10;
-  font-family: "M+PLUS+1";
 }
 
 /*-------------------------
 foundation
 --------------------------*/
 /*-------------------------
-layoutx
+layout
 -------------------------*/
 /*---------------------------
 component
