--- a/scss/layout/_body.scss
+++ b/scss/layout/_body.scss
@@ -11,6 +11,7 @@ body{
             bottom: 0;
             left: 0;
             right: 0;
+            transition: transform .8s;
         }
     }
 }
