--- a/scss/layout/_sidebar.scss
+++ b/scss/layout/_sidebar.scss
@@ -1,14 +1,31 @@
 @use "../foundation/mixin";
 
 .l-sidebar{
-    display: none;
+    overflow-x: hidden;
     background-color: #F2EDE9;
+    font-family: 'M+PLUS+1';
+    width: 100%;
+    height: 100vh;
+    position: fixed;
+    top: 0;
+    right: -120%;
+    z-index: 1000;
+    overflow: scroll;
     &.active{
-        display: block;
+        transition: all .5s;
+        right: -10%;
+        @include mixin.tab{
+            right: -60%;
+        }
     }
     @include mixin.pc{
-        display: block;
+        display: grid;
         grid-column: 2/3;
         grid-row: 1/3;
+        height: 100%;
+        position: relative;
+        left: initial;
+        top: initial;
+        right: initial;
     }
 }
