--- a/scss/object/component/_text.scss
+++ b/scss/object/component/_text.scss
@@ -26,6 +26,7 @@
     }
 
     &--map{
+        position: relative;
         color: #fff;
         font-family: "M+PLUS+1";
         font-size: 14px;
@@ -33,6 +34,7 @@
         padding: 20px 40px 40px 40px;
         line-height: 2.5;
         height: 100%;
+        z-index: 3;
         @include mixin.pc{
             font-size: 16px;
             padding: 55px 120px;
