--- a/scss/object/component/_button.scss
+++ b/scss/object/component/_button.scss
@@ -37,3 +37,16 @@
     }
 }
 
+/*-------------------------
+archive
+--------------------------*/
+
+.c-card__content--btn{
+    background-color: #fff;
+    color: #707070;
+    font-size: 17px;
+    border: none;
+    margin: 40px 0 44px;
+    padding: 10px 42px;
+    border-radius: 20px;
+}    
