--- a/scss/object/component/_text.scss
+++ b/scss/object/component/_text.scss
@@ -41,3 +41,29 @@
         }
     }
 }
+
+/*-------------------------
+archive
+--------------------------*/
+
+.c-archive-visual__text{
+    position: absolute;
+    top: 0;
+    padding: 160px 0 0 35px;
+    color: #fff;
+}
+
+.c-subheading__text{
+    font-size: 16px;
+    font-weight: normal;
+    text-align: center;
+    padding: 20px;
+    color: #3C2A10;
+}
+
+.c-card__content--text{
+    font-size: 16px;
+    font-weight: normal;
+    padding: 10px 73px 0 17px;
+    color: #fff;
+}
