--- a/scss/object/component/_title.scss
+++ b/scss/object/component/_title.scss
@@ -99,3 +99,33 @@
         }
     }
 }
+/*-------------------------
+archive
+--------------------------*/
+
+.c-archive-visual__title{
+    position: absolute;
+    top: 0;
+    font-size: 36px;
+    color: #fff;
+    padding: 105px 0 7px 35px;
+}
+
+.c-subheading__title{
+    font-size: 28px;
+    padding: 30px 0 10px 22px;
+    color: #3C2A10;
+}
+
+.c-card__content--title{
+    font-size: 20px;
+    padding: 32px 0 24px 17px;
+    color: #fff;
+
+}
+
+.c-card__content--subtitle{
+    font-size: 16px;
+    color: #fff;
+    padding-left: 17px;
+}
