--- a/scss/object/component/_background.scss
+++ b/scss/object/component/_background.scss
@@ -94,3 +94,36 @@
       font-weight: normal;
     }
 }
+
+
+/*-------------------------
+archieve
+--------------------------*/
+
+.p-archive-visual{
+    position: relative;
+    > img{
+        height: 285px;
+        width: 100%;
+        background-repeat: no-repeat;
+        object-fit: cover;
+        object-position: left;
+        background-color: rgba(0, 0, 0, 0.9);
+    }
+}
+
+.p-card__content{
+    position: relative;
+    background-color: #3C2B1C;
+    width: calc(100% - 40px);
+    margin: 0 20px;
+
+
+    > img{
+        width: 100%;
+        height: 230px;
+        object-fit: cover;
+        object-position: left center;
+        background-repeat: no-repeat;
+    }
+}
