--- a/scss/layout/_body.scss
+++ b/scss/layout/_body.scss
@@ -1,6 +1,7 @@
 body{
     grid-column: 1/3;
     grid-row: 1/4;
+    background-color: #FFFDFA;
     &.active{
         overflow: hidden;
         &::after{
