--- a/css/style.css
+++ b/css/style.css
@@ -19,10 +19,6 @@ body button, body input, body select, body textarea {
 body li {
   list-style: none;
 }
-body a {
-  color: #707070;
-  text-decoration: none;
-}
 
 .l-header {
   height: 217px;
@@ -32,6 +28,7 @@ body a {
 }
 .l-header a {
   text-decoration: none;
+  color: #707070;
 }
 @media screen and (min-width: 600px) {
   .l-header {
@@ -257,6 +254,108 @@ archieve
   }
 }
 
+/*-------------------------
+single
+--------------------------*/
+.p-single-visual {
+  position: relative;
+}
+.p-single-visual > img {
+  height: 225px;
+  width: 100%;
+  background-repeat: no-repeat;
+  -o-object-fit: cover;
+     object-fit: cover;
+}
+@media screen and (min-width: 600px) {
+  .p-single-visual > img {
+    height: 500px;
+  }
+}
+
+.c-card__content--top > img {
+  width: 100%;
+  background-repeat: no-repeat;
+  -o-object-fit: cover;
+     object-fit: cover;
+  margin-bottom: 30px;
+}
+@media screen and (min-width: 600px) {
+  .c-card__content--top > img {
+    margin-bottom: 60px;
+  }
+}
+
+.p-card__content--small > li > img {
+  width: 100%;
+  background-repeat: no-repeat;
+  -o-object-fit: cover;
+     object-fit: cover;
+}
+
+.p-card--first > li > img {
+  grid-column: 1/2;
+  grid-row: 1/2;
+}
+
+.p-card--second > li > img {
+  grid-column: 2/3;
+  grid-row: 1/2;
+}
+
+.p-card__content--medium > img {
+  width: calc(100% - 68px);
+  background-repeat: no-repeat;
+  -o-object-fit: cover;
+     object-fit: cover;
+  height: 100%;
+  margin: 0 34px 30px 34px;
+}
+@media screen and (min-width: 600px) {
+  .p-card__content--medium > img {
+    width: calc(100% - 100px);
+    margin: 0 50px 230px;
+  }
+}
+@media screen and (min-width: 1280px) {
+  .p-card__content--medium > img {
+    width: 50%;
+    margin-bottom: 60px;
+  }
+}
+
+@media screen and (min-width: 600px) {
+  .c-card__content--large {
+    display: flex;
+    flex-wrap: wrap;
+  }
+}
+.c-card__content--large > img {
+  width: 100%;
+  background-repeat: no-repeat;
+  -o-object-fit: cover;
+     object-fit: cover;
+  margin-bottom: 20px;
+}
+@media screen and (min-width: 600px) {
+  .c-card__content--large > img {
+    width: calc(50% - 16px);
+    margin: 10px 8px;
+  }
+}
+@media screen and (min-width: 1280px) {
+  .c-card__content--large > img {
+    width: calc(33.3% - 20px);
+    margin: 10px;
+  }
+}
+
+@media screen and (min-width: 600px) {
+  .c-large__first {
+    margin-right: 16px;
+  }
+}
+
 .c-btn--sidebar {
   position: absolute;
   font-size: 20px;
@@ -323,6 +422,52 @@ archive
   }
 }
 
+/*-------------------------
+single
+--------------------------*/
+.c-single__btn {
+  width: 100%;
+  background-color: #F2EDE9;
+  border-radius: 20px;
+  padding: 30px 143px;
+  margin-bottom: 30px;
+  border: solid 1px #707070;
+}
+@media screen and (min-width: 600px) {
+  .c-single__btn {
+    margin-bottom: 60px;
+  }
+}
+.c-single__btn > a {
+  text-decoration: none;
+  color: #3C2A10;
+  font-size: 16px;
+}
+
+table {
+  border-collapse: collapse;
+  width: 100%;
+  margin: 10px 0 30px;
+}
+@media screen and (min-width: 600px) {
+  table {
+    margin: 40px 0 60px;
+  }
+}
+
+table th, table td {
+  border: solid 1px #707070;
+}
+
+table td {
+  padding: 28px 0 28px 30px;
+  font-weight: normal;
+}
+
+.p-table {
+  width: 60%;
+}
+
 .p-bm__items {
   position: relative;
   background-color: rgba(255, 255, 255, 0.8);
@@ -344,7 +489,7 @@ archive
 }
 .c-text--items {
   padding: 40px 0;
-  padding-left: 66px;
+  padding-left: 60px;
   font-family: "M+PLUS+1";
   font-size: 20px;
   font-weight: normal;
@@ -389,12 +534,8 @@ archive
 }
 @media screen and (min-width: 600px) {
   .c-archive-visual__text {
-    padding: 140px 0 0 305px;
-  }
-}
-@media screen and (min-width: 1280px) {
-  .c-archive-visual__text {
-    padding-top: 120px;
+    position: relative;
+    padding: 0 0 0 20px;
   }
 }
 
@@ -402,17 +543,11 @@ archive
   font-size: 16px;
   font-weight: normal;
   text-align: center;
-  padding: 20px 20px 0 20px;
   color: #3C2A10;
 }
 @media screen and (min-width: 600px) {
   .c-subheading__text {
-    padding: 15px 40px 0 40px;
-  }
-}
-@media screen and (min-width: 1280px) {
-  .c-subheading__text {
-    padding: 15px 100px 0 100px;
+    padding-bottom: 17px;
   }
 }
 
@@ -429,7 +564,81 @@ archive
 }
 @media screen and (min-width: 1280px) {
   .c-card__content--text {
-    padding: 17px 100px 0 63px;
+    padding: 17px 100px 0 50px;
+  }
+}
+
+/*-------------------------
+single
+--------------------------*/
+.c-subheading__text--single {
+  font-size: 16px;
+  padding-bottom: 34px;
+  font-weight: normal;
+}
+@media screen and (min-width: 600px) {
+  .c-subheading__text--single {
+    padding-bottom: 0;
+  }
+}
+
+.c-quotation__text {
+  font-weight: normal;
+  padding: 30px 18px;
+}
+@media screen and (min-width: 600px) {
+  .c-quotation__text {
+    padding: 50px 55px 60px;
+  }
+}
+@media screen and (min-width: 1280px) {
+  .c-quotation__text {
+    padding: 50px 50px 60px;
+  }
+}
+.c-quotation__text--cite {
+  font-weight: normal;
+  padding-bottom: 30px;
+}
+@media screen and (min-width: 600px) {
+  .c-quotation__text--cite {
+    padding: 0 0 60px 55px;
+  }
+}
+@media screen and (min-width: 1280px) {
+  .c-quotation__text--cite {
+    padding: 0 0 50px 50px;
+  }
+}
+.c-quotation__text > a {
+  -webkit-text-decoration: solid;
+          text-decoration: solid;
+  color: initial;
+}
+
+.c-card__content__text {
+  font-weight: normal;
+  text-indent: 1rem;
+}
+
+.p-card--first > li > p {
+  grid-column: 2/3;
+  grid-row: 1/3;
+  padding-left: 10px;
+}
+
+.p-card--second > li > p {
+  grid-column: 1/2;
+  grid-row: 1/3;
+  padding-right: 10px;
+}
+
+.c-single__text--bold {
+  padding-bottom: 175px;
+}
+@media screen and (min-width: 600px) {
+  .c-single__text--bold {
+    padding-bottom: 230px;
   }
 }
 
@@ -552,30 +761,21 @@ archive
 }
 @media screen and (min-width: 600px) {
   .c-archive-visual__title {
+    position: relative;
     font-size: 60px;
-    padding: 102px 0 102px 86px;
-  }
-}
-@media screen and (min-width: 1280px) {
-  .c-archive-visual__title {
-    padding: 80px 0 0 86px;
+    padding: 0;
   }
 }
 
 .c-subheading__title {
   font-size: 28px;
-  padding: 30px 0 10px 22px;
+  padding: 30px 0;
   color: #3C2A10;
 }
 @media screen and (min-width: 600px) {
   .c-subheading__title {
     font-size: 36px;
-    padding: 36px 0 10px 40px;
-  }
-}
-@media screen and (min-width: 1280px) {
-  .c-subheading__title {
-    padding: 60px 0 10px 100px;
+    padding: 36px 0 25px 0;
   }
 }
 
@@ -591,8 +791,8 @@ archive
 }
 @media screen and (min-width: 1280px) {
   .c-card__content--title {
-    font-size: 36px;
-    padding: 53px 0 0 63px;
+    font-size: 30px;
+    padding: 53px 0 0 45px;
   }
 }
 
@@ -609,7 +809,142 @@ archive
 @media screen and (min-width: 1280px) {
   .c-card__content--subtitle {
     font-size: 24px;
-    padding: 47px 0 0 63px;
+    padding: 47px 0 0 45px;
+  }
+}
+
+/*-------------------------
+single
+--------------------------*/
+.c-single-visual__title {
+  position: absolute;
+  font-size: 36px;
+  top: 40%;
+  padding-left: 20px;
+  color: #fff;
+}
+@media screen and (min-width: 600px) {
+  .c-single-visual__title {
+    font-size: 60px;
+  }
+}
+@media screen and (min-width: 600px) {
+  .c-single-visual__title {
+    padding-left: 86px;
+  }
+}
+
+.p-subheading > h2 {
+  font-size: 28px;
+  padding: 30px 0;
+}
+@media screen and (min-width: 600px) {
+  .p-subheading > h2 {
+    font-size: 36px;
+    padding: 60px 0;
+  }
+}
+.p-subheading > h3 {
+  font-size: 24px;
+  padding: 34px 0 31px;
+}
+@media screen and (min-width: 600px) {
+  .p-subheading > h3 {
+    font-size: 28px;
+    padding: 60px 0;
+  }
+}
+.p-subheading > h4 {
+  font-size: 20px;
+  padding-bottom: 30px;
+}
+@media screen and (min-width: 600px) {
+  .p-subheading > h4 {
+    padding-bottom: 60px;
+  }
+}
+.p-subheading > h5, .p-subheading > h6 {
+  font-size: 20px;
+  padding-bottom: 30px;
+}
+@media screen and (min-width: 600px) {
+  .p-subheading > h5, .p-subheading > h6 {
+    padding-bottom: 60px;
+  }
+}
+
+.c-page-visual__title {
+  position: relative;
+  text-align: center;
+  top: -140px;
+  padding: 0;
+}
+@media screen and (min-width: 600px) {
+  .c-page-visual__title {
+    position: absolute;
+    font-size: 60px;
+    top: 40%;
+    padding-left: 86px;
+  }
+}
+
+.c-archive-visual__list {
+  display: flex;
+}
+@media screen and (min-width: 600px) {
+  .c-archive-visual__list {
+    position: absolute;
+    top: 100px;
+    left: 86px;
+    align-items: center;
+  }
+}
+@media screen and (min-width: 1280px) {
+  .c-archive-visual__list {
+    top: 80px;
+  }
+}
+
+/*-------------------------
+single
+--------------------------*/
+.p-order-list {
+  font-weight: normal;
+}
+
+.p-normal-list {
+  font-weight: normal;
+}
+
+.c-order-list--first {
+  padding: 20px 0 10px;
+}
+@media screen and (min-width: 600px) {
+  .c-order-list--first {
+    padding-top: 50px;
+  }
+}
+.c-order-list--second {
+  padding: 10px 0;
+  text-indent: 1rem;
+}
+.c-order-list--third {
+  padding: 10px 0 30px;
+}
+
+.c-normal-list--fourth {
+  padding: 30px 0 10px;
+}
+.c-normal-list--fifth {
+  padding: 10px 0;
+  text-indent: 1rem;
+}
+.c-normal-list--sixth {
+  padding: 10px 0;
+}
+@media screen and (min-width: 600px) {
+  .c-normal-list--sixth {
+    padding-bottom: 40px;
   }
 }
 
@@ -700,26 +1035,53 @@ archive
   position: relative;
   background-color: #3C2B1C;
   height: 100%;
-  width: calc(100% - 40px);
-  margin: 20px;
+  width: 100%;
+  margin: 20px 0;
 }
 @media screen and (min-width: 600px) {
   .p-card__content {
     display: flex;
     height: 355px;
-    width: calc(100% - 80px);
-    margin: 20px 40px;
   }
 }
 @media screen and (min-width: 1280px) {
   .p-card__content {
     height: 471px;
-    width: calc(100% - 200px);
-    margin: 20px 100px;
   }
 }
 .p-card__content--details {
   text-align: center;
+}
+
+/*-------------------------
+single
+--------------------------*/
+.p-card__content--small {
+  display: grid;
+  width: 100%;
+}
+.p-card__content--medium {
+  text-align: center;
+}
+
+.p-card--first {
+  grid-template-columns: 40% 60%;
+  padding-bottom: 30px;
+}
+@media screen and (min-width: 600px) {
+  .p-card--first {
+    padding-bottom: 120px;
+  }
+}
+
+.p-card--second {
+  grid-template-columns: 60% 40%;
+  padding-bottom: 30px;
+}
+@media screen and (min-width: 600px) {
+  .p-card--second {
+    padding-bottom: 60px;
+  }
 }
 
 @media screen and (min-width: 600px) {
@@ -733,6 +1095,10 @@ archive
   font-size: 16px;
   font-weight: normal;
   padding: 40px 20px 30px 20px;
+}
+.p-pagination--sp__list > a {
+  color: #707070;
+  text-decoration: none;
 }
 
 .p-pagination {
@@ -759,7 +1125,7 @@ archive
     display: flex;
     align-items: center;
     justify-content: center;
-    margin: 85px 0 30px;
+    padding: 85px 0 30px;
     line-height: 35px;
   }
   .p-pagination__list {
@@ -777,7 +1143,60 @@ archive
     height: 35px;
     padding: 13px;
     line-height: 35px;
+    color: #707070;
+    text-decoration: none;
   }
+}
+@media screen and (min-width: 1280px) {
+  .p-pagination {
+    padding: 130px 0 65px;
+  }
+}
+
+.p-archive__wrapper {
+  padding: 0 20px;
+}
+@media screen and (min-width: 600px) {
+  .p-archive__wrapper {
+    padding: 0 45px;
+  }
+}
+@media screen and (min-width: 1280px) {
+  .p-archive__wrapper {
+    padding: 0 100px;
+  }
+}
+
+.p-single__wrapper {
+  padding: 0 20px;
+  color: #3C2A10;
+}
+@media screen and (min-width: 600px) {
+  .p-single__wrapper {
+    padding: 0 60px;
+  }
+}
+@media screen and (min-width: 1280px) {
+  .p-single__wrapper {
+    padding: 0 100px;
+  }
+}
+
+.p-quotation {
+  background-color: #F5F5F5;
+  margin-bottom: 30px;
+}
+@media screen and (min-width: 600px) {
+  .p-quotation {
+    margin-bottom: 60px;
+  }
+}
+
+.p-preformatted {
+  width: 100%;
+  background-color: #F5F5F5;
+  margin: 20px 0 30px;
+  padding: 40px;
 }
 
 /*-------------------------
