--- a/scss/object/component/_text.scss
+++ b/scss/object/component/_text.scss
@@ -9,7 +9,7 @@
 
     &--items{
         padding: 40px 0;
-        padding-left: 66px;
+        padding-left: 60px;
         font-family: 'M+PLUS+1';
         font-size: 20px;
         font-weight: normal;
@@ -52,10 +52,8 @@ archive
     padding: 160px 0 0 35px;
     color: #fff;
     @include mixin.tab{
-        padding: 140px 0 0 305px;
-    }
-    @include mixin.pc{
-        padding-top: 120px;
+        position: relative;
+        padding: 0 0 0 20px;
     }
 }
 
@@ -63,14 +61,9 @@ archive
     font-size: 16px;
     font-weight: normal;
     text-align: center;
-    padding: 20px 20px 0 20px;
     color: #3C2A10;
     @include mixin.tab{
-        padding: 15px 40px 0 40px;
-    }
-
-    @include mixin.pc{
-        padding: 15px 100px 0 100px;
+        padding-bottom: 17px;
     }
 }
 
@@ -83,7 +76,68 @@ archive
         padding: 10px 59px 0 35px;
     }
     @include mixin.pc{
-        padding: 17px 100px 0 63px;
+        padding: 17px 100px 0 50px;
     }
+}
 
+/*-------------------------
+single
+--------------------------*/
+
+.c-subheading__text--single{
+    font-size: 16px;
+    padding-bottom: 34px;
+    font-weight: normal;
+    @include mixin.tab{
+        padding-bottom: 0;
+    }
+}
+
+.c-quotation__text{
+    font-weight: normal;
+    padding: 30px 18px;
+    @include mixin.tab{
+        padding: 50px 55px 60px;
+    }
+    @include mixin.pc{
+        padding: 50px 50px 60px;
+    }
+    &--cite{
+        font-weight: normal;
+        padding-bottom: 30px;
+        @include mixin.tab{
+            padding: 0 0 60px 55px;
+        }
+        @include mixin.pc{
+            padding: 0 0 50px 50px;
+        }    
+    }
+    > a{
+        text-decoration: solid;
+        color: initial;
+    }
+}
+
+.c-card__content__text{
+    font-weight: normal;
+    text-indent: 1rem;
+}
+
+.p-card--first > li > p{
+    grid-column: 2/3;
+    grid-row: 1/3;
+    padding-left: 10px;
+}
+
+.p-card--second > li > p{
+    grid-column: 1/2;
+    grid-row: 1/3;
+    padding-right: 10px;
+}
+
+.c-single__text--bold{
+    padding-bottom: 175px;
+    @include mixin.tab{
+        padding-bottom: 230px;
+    }
 }
