--- a/scss/object/component/_title.scss
+++ b/scss/object/component/_title.scss
@@ -110,24 +110,19 @@ archive
     color: #fff;
     padding: 105px 0 7px 35px;
     @include mixin.tab{
+        position: relative;
         font-size: 60px;
-        padding: 102px 0 102px 86px;
-    }
-    @include mixin.pc{
-        padding: 80px 0 0 86px;
+        padding: 0;
     }
 }
 
 .c-subheading__title{
     font-size: 28px;
-    padding: 30px 0 10px 22px;
+    padding: 30px 0;
     color: #3C2A10;
     @include mixin.tab{
         font-size: 36px;
-        padding: 36px 0 10px 40px;
-    }
-    @include mixin.pc{
-        padding: 60px 0 10px 100px;
+        padding: 36px 0 25px 0;
     }
 }
 
@@ -139,8 +134,8 @@ archive
         padding: 30px 0 0 35px;
     }
     @include mixin.pc{
-        font-size: 36px;
-        padding: 53px 0 0 63px;
+        font-size: 30px;
+        padding: 53px 0 0 45px;
     }
 }
 
@@ -153,6 +148,73 @@ archive
     }
     @include mixin.pc{
         font-size: 24px;
-        padding: 47px 0 0 63px;
+        padding: 47px 0 0 45px;
+    }
+}
+
+
+/*-------------------------
+single
+--------------------------*/
+
+.c-single-visual__title{
+    position: absolute;
+    font-size: 36px;
+    top: 40%;
+    padding-left: 20px;
+    color: #fff;
+    @include mixin.tab{
+        font-size: 60px;
+    }
+    @include mixin.tab{
+        padding-left: 86px;
+    }
+}
+
+.p-subheading{
+    > h2{
+        font-size: 28px;
+        padding: 30px 0;
+        @include mixin.tab{
+            font-size: 36px;
+            padding: 60px 0;
+        } 
+    }
+    > h3{
+        font-size: 24px;
+        padding: 34px 0 31px;
+        @include mixin.tab{
+            font-size: 28px;
+            padding: 60px 0;
+        }    
+    }
+    > h4{
+        font-size: 20px;
+        padding-bottom: 30px;
+        @include mixin.tab{
+            padding-bottom: 60px;
+        }
+    }
+    > h5, > h6{
+        font-size: 20px;
+        padding-bottom: 30px;
+        @include mixin.tab{
+            padding-bottom: 60px;
+        }
+    }
+}
+
+
+
+.c-page-visual__title{
+    position: relative;
+    text-align: center;
+    top: -140px;
+    padding: 0;
+    @include mixin.tab{
+        position: absolute;
+        font-size: 60px;
+        top: 40%;
+        padding-left: 86px;
     }
 }
